<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_trip"
            android:icon="@drawable/ic_cab"
            android:title="@string/my_trip" />

        <item
            android:id="@+id/nav_support"
            android:icon="@drawable/ic_supervisor_account_black_24dp"
            android:title="@string/support" />

    </group>

</menu>
