<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="50dp"
    android:layout_marginRight="50dp"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/yellow_back" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgDriver"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_profile"
                app:civ_circle_background_color="@color/white" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:text="@string/driver_name"
                android:textColor="@android:color/black"
                android:textSize="20sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:text="@string/app_name"
                android:textColor="@android:color/black"
                android:textSize="15sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:text="@string/your_ratting"
                android:textAllCaps="true"
                android:textColor="@color/yellow_dark"
                android:textSize="15sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:text="@string/ratting_text_review"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <RatingBar
                    android:id="@+id/rattingBar"
                    style="@style/ratingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:rating="3"
                    android:theme="@style/RatingBar" />

                <TextView
                    android:id="@+id/txtRatting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:gravity="bottom"
                    android:text="3.0"
                    android:textAlignment="gravity"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtRate"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:gravity="bottom"
                    android:text="Good"
                    android:textAlignment="gravity"
                    android:textSize="15sp" />
            </LinearLayout>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:text="@string/dot_line" />

        <EditText
            android:id="@+id/txtReview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:backgroundTint="@color/black"
            android:hint="@string/wirte_your_review" />

        <Button
            android:id="@+id/btnSubmit"
            style="@style/Widget.ButtonCab"
            android:layout_height="40dp"
            android:layout_width="match_parent"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="0dp"
            android:background="@drawable/buttoncab"
            android:text="@string/submit"
            android:textColor="@color/black" />
    </LinearLayout>
</ScrollView>