<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:fitsSystemWindows="true"
    tools:context=".OTPActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:src="@drawable/logo"
            android:transitionName="imageTransition" />

        <TextView
            android:id="@+id/otpMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/txt_otp_message"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="17sp"
            tools:targetApi="jelly_bean" />

        <LinearLayout
            android:id="@+id/edtLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/otpMessage"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="70dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edtOtp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:fontFamily="@font/roboto_light"
                android:hint="@string/txt_otp"
                android:inputType="number"
                android:maxLength="6"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                tools:targetApi="lollipop" />

            <TextView
                android:id="@+id/timer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="timer"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="normal" />
        </LinearLayout>

        <Button
            android:id="@+id/btnOtp"
            style="@style/Widget.ButtonCab"
            android:layout_width="match_parent"
            android:layout_below="@+id/edtLine"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/buttoncab"
            android:fontFamily="@font/roboto_light"
            android:text="@string/btn_otp"
            android:textSize="15sp"
            tools:targetApi="jelly_bean" />

        <TextView
            android:id="@+id/txtResend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="50dp"
            android:fontFamily="@font/roboto_light"
            android:gravity="end"
            android:text="@string/txt_resend_otp"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            tools:targetApi="jelly_bean" />
    </LinearLayout>
</RelativeLayout>